# slbinst

./: .gitignore  LICENSE  Makefile.in  configure  configure.ac
.tup/: db
src/: Makefile.in  download_src.c  download_src.h  fetch_url.c  fetch_url.h  kutil.c  kutil.h  main.c  search_pkg.c  search_pkg.h
